# protodec

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  main.rs
css/: app.css
pkg/: package.d.ts  package.js  package.json  package_bg.d.ts  package_bg.wasm
src/: binary_proto_object_loader.rs  data.rs  data_view_model.rs  decode.rs  error.rs  flags.rs  format.rs  key.rs  kind32.rs  kind64.rs  kind_varint.rs  lib.rs  main.rs  model.rs  test_data.proto  test_data.rs  ui_message.rs  update.rs  varint.rs  view.rs  wire_type.rs
src/tests/: binary_proto_object_loader.rs  decode.rs  key.rs  kind32.rs  kind64.rs  kind_varint.rs  mod.rs  model.rs  test_data.proto  test_data.rs  varint.rs  wire_type.rs
