[package]
name = "protodec"
version = "0.1.0"
authors = ["Илья Мазуренко <ivmazurenko@yandex.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
# This commit points to Seed 0.7.0 with important fixes.
# Replace with `seed = "0.8.0"` (or newer) once released.
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
protobuf = { version = "2" }
uuid = { version ="*",  features = ["v4"] }
byteorder = "*"

[build-dependencies]
protoc-rust = "2.14.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
